--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/react": "^4.1.1",
+    "animate.css": "^4.1.1",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase": "^10.5.2",
     "lottie-react": "^2.4.0",
     "mysql2": "^3.6.2",
     "react": "^18.2.0",
@@ -20,6 +23,7 @@
     "react-hook-form": "^7.47.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.17.0",
+    "react-select": "^5.8.0",
     "react-tooltip": "^5.22.0"
   },
   "devDependencies": {
